wcfsetup/install/files/style/ui/userProfile.scss
.userProfileHeader.box {
	margin: 0;
}
.userProfileCoverPhoto {
	background-image: url('../images/user-profile-header.jpg'); // todo
	background-position: center;
	background-size: cover;
	
	/* adds a box-shadow on the top and bottom of the element to create perspective
	   and a clear separation if the images color is close to the surrounding elements */
	box-shadow: inset 0 10px 10px -10px rgba(0, 0, 0, .6), inset 0 -10px 10px -10px rgba(0, 0, 0, .6);
	
	@include screen-md-up {
		height: 300px;
	}
	
	@include screen-sm-down {
		height: 200px;
	}
	
	&::after {
		bottom: 0;
		content: '';
		left: 0;
		position: absolute;
		right: 0;
		top: 0;
		
		@include screen-md-up {
			background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, .7) 100%);
		}
		
		@include screen-sm-down {
			background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, .7) 100%);
		}
	}
}

.userProfileHeaderContainer {
	position: relative;
}

.userProfileUser {
	position: absolute;
	width: 100%;
	
	@include screen-md-up {
		bottom: 0;
	}
	
	@include screen-sm-down {
		bottom: 10px;
	}
	
	.contentHeader {
		@include screen-md-up {
			align-items: flex-end;
		}
		
		@include screen-sm-down {
			align-items: center;
			display: flex;
		}
	}
	
	.contentHeaderIcon {
		align-items: center;
		background-color: #fff;
		border-radius: 50%;
		box-sizing: content-box;
		box-shadow: 0 3px 6px rgba(0 ,0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
		display: flex;
		justify-content: center;
		
		@include screen-md-up {
			border: 4px solid transparent;
			flex: 0 0 160px;
			height: 160px;
			margin-right: 20px;
			transform: translateY(50%);
			width: 160px;
		}
		
		@include screen-sm-down {
			border: 2px solid transparent;
			flex: 0 0 64px;
			height: 64px;
			margin-right: 10px;
			width: 64px;
		}
		
		img {
			@include screen-sm-down {
				width: 64px !important;
				height: 64px !important;
			}
		}
	}
	
	.contentHeaderTitle {
		align-items: center;
		color: #fff;
		text-shadow: 0 1px 4px rgba(0, 0, 0, .5);
		
		@include screen-md-up {
			display: flex;
			flex-wrap: wrap;
			padding-bottom: 10px;
			
			> .contentTitle {
				flex: 0 0 auto;
				margin-right: 10px;
			}
			
			> .userTitleBadge {
				flex: 0 0 auto;
			}
		}
		@include screen-sm-down {
			flex: 1 1 auto;
		}
		
		a {
			color: #fff;
		}
		
		> .userTitleBadge {
			box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
			
			@include screen-sm-down {
				margin-top: 5px;
			}
		}
		
		.icon {
			color: inherit;
		}
	}
	
	.contentDescription {
		@include screen-md-up {
			flex: 0 0 100%;
			margin-top: 5px;
			
			.inlineList:not(:first-child) {
				margin-top: 2px;
				
				@include wcfFontSmall;
			}
		}
		
		@include screen-sm-down {
			display: none;
		}
	}
	
	.userProfileButtonContainer {
		@include screen-md-up {
			display: flex;
			flex: 0 0 auto;
			margin-bottom: 20px;
		}
		@include screen-sm-down {
			display: block;
			position: absolute;
			right: 10px;
			bottom: 0;
		}
		
		> li {
			margin-left: 10px;
			position: relative;
			
			@include screen-md-up {
				flex: 0 0 auto;
			}
			@include screen-sm-down {
				margin-top: 10px;
			}
			
			> a {
				background-color: $wcfHeaderMenuBackground;
				border-radius: 50%;
				box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
				color: $wcfHeaderMenuLink;
				display: block;
				padding: 10px;
				
				@include screen-md-up {
					padding: 10px;
				}
				@include screen-sm-down {
					padding: 5px;
				}
				
				.icon {
					color: inherit;
					
					@include screen-sm-down {
						font-size: 18px;
						height: 24px;
						line-height: 24px;
						width: 24px;
					}
				}
			}
			
			> .userProfileButtonMenu {
				background-color: $wcfHeaderMenuDropdownBackground;
				box-shadow: 0 0 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
				border-radius: 0 0 3px 3px;
				padding: 5px 0;
				position: absolute;
				visibility: hidden;
				
				@include screen-md-up {
					right: 0;
				}
				@include screen-sm-down {
					right: 40px;
					top: 0;
				}
				
				> li {
					&.divider:not(:first-child) {
						border-top: 1px solid $wcfHeaderMenuDropdownBackgroundActive;
						margin-top: 5px;
						padding-top: 5px;
					}
					
					> a {
						color: $wcfHeaderMenuDropdownLink;
					}
					
					> a,
					> span {
						display: block;
						padding: 7px 20px;
						white-space: nowrap;
						text-align: right;
					}
					
					&.active > a,
					> a:hover {
						background-color: $wcfHeaderMenuDropdownBackgroundActive;
						color: $wcfHeaderMenuDropdownLinkActive;
						text-decoration: none;
					}
				}
			}
			
			&:hover {
				> a {
					background-color: $wcfHeaderMenuLinkBackgroundActive;
					color: $wcfHeaderMenuLinkActive;
				}
				
				> .userProfileButtonMenu {
					visibility: visible;
				}
			}
		}
	}
}

.userProfileDescriptionMobile {
	@include screen-md-up {
		display: none;
	}
	
	@include screen-sm-down {
		border-bottom: 1px solid $wcfContentBorderInner;
		
		> .layoutBoundary {
			padding: 20px 10px;
		}
	}
}

.userProfileDetails {
	> .layoutBoundary {
		@include screen-md-up {
			padding: 20px 20px 20px 208px;
		}
		@include screen-sm-down {
			padding: 20px 0;
		}
	}
	
	.userStats {
		display: flex;
		flex-wrap: wrap;
		margin-bottom: -20px;
		
		li {
			flex: 0 0 auto;
			margin-bottom: 20px;
			padding: 0 10px;
			text-align: center;
			white-space: nowrap;
			
			@include screen-lg {
				width: 12%;
			}
			@include screen-sm-md {
				width: 25%;
			}
			@include screen-xs {
				width: 33%;
			}
			
			a {
				display: block;
			}
		}
		
		.userStatsValue {
			overflow: hidden;
			
			@include wcfFontTitle;
		}
		
		.userStatsTitle {
			color: $wcfContentDimmedText;
			display: block;
			margin-top: 4px;
			overflow: hidden;
			text-overflow: ellipsis;
			
			@include screen-sm-down {
				@include wcfFontSmall;
			}
		}
	}
}

#tpl_wcf_user .main {
	padding-top: 0;
	
	.userProfileContent,
	.sidebar {
		margin-top: 20px;
	}
}

.userAvatarImage {
	background-color: #fff;
	border-radius: 50%;
}

.userAvatarList {
	display: flex;
	flex-wrap: wrap;
	margin-bottom: -10px;
	
	> li {
		flex: 0 0 48px;
		margin-bottom: 10px;
		text-align: center;
		
		&:not(:last-child) {
			margin-right: -12px;
		}
		
		> a {
			display: block;
			
			> img {
				padding: 2px;
			}
		}
	}
}

.userList {
	.box48 {
		align-items: center;
	}
}

.likeList {
	> .likeTypeSelection {
		text-align: right;
		
		&:hover {
			background-color: transparent;
		}
		
		> .buttonGroup {
			display: inline-flex;
			
			&:not(:first-child) {
				margin-left: 5px;
			}
		}
	}
}

/* using `dl` + `.inlineDataList` to prevent styles applied to the
   data list provided by the `userInformation` template */
.userProfilePreview dl.inlineDataList {
	margin-top: 10px;
	
	@include wcfFontSmall;
}

